--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- Environment Variables (.env file support) -->
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		
 		<!-- Additional Database Dependencies -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
